--- a/interconnect/metamodel/pom.xml
+++ b/interconnect/metamodel/pom.xml
@@ -15,6 +15,12 @@
             <artifactId>jakarta.xml.ws-api</artifactId>
             <version>${jakarta.xml.ws-api.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb-runtime.version}</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
