--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
         <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
         <jakarta.xml.ws-api.version>4.0.0</jakarta.xml.ws-api.version>
+        <jaxb-runtime.version>3.0.0</jaxb-runtime.version>
         <jetty.version>9.4.52.v20230823</jetty.version>
         <joda.time.version>2.11.2</joda.time.version>
         <log4j.version>2.19.0</log4j.version>
