--- a/interconnect/core/pom.xml
+++ b/interconnect/core/pom.xml
@@ -7,8 +7,6 @@
     </parent>
     <artifactId>dvalin-interconnect-core</artifactId>
     <name>Dvalin interconnect core library</name>
-    <properties>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>de.taimos</groupId>
@@ -24,11 +22,6 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-pool</artifactId>
-            <version>${activemq.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-client</artifactId>
             <version>${activemq.version}</version>
         </dependency>
 
@@ -105,6 +98,12 @@
             <artifactId>spring-test</artifactId>
             <version>${org.springframework.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
+            <version>${jakarta.jms-api.version}</version>
         </dependency>
     </dependencies>
 </project>
