--- a/jaxrs/pom.xml
+++ b/jaxrs/pom.xml
@@ -45,11 +45,13 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-server</artifactId>
+            <artifactId>websocket-jetty-server</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-servlet</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
 
         <dependency>
