--- a/jaxrs/pom.xml
+++ b/jaxrs/pom.xml
@@ -31,8 +31,8 @@
 
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-jaxrs2</artifactId>
-            <version>2.2.19</version>
+            <artifactId>swagger-jaxrs2-jakarta</artifactId>
+            <version>${swagger-jaxrs2-jakarta.version}</version>
         </dependency>
 
         <dependency>
