fixing merge problems (mostly javax to jakarta)

--- a/interconnect/core/pom.xml
+++ b/interconnect/core/pom.xml
@@ -23,6 +23,7 @@
             <artifactId>dvalin-jms-core</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
+        </dependency>
 
         <!-- Spring Framework -->
         <!-- Core utilities used by other modules. Define this if you use Spring
