--- a/interconnect/core-legacy/pom.xml
+++ b/interconnect/core-legacy/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>de.taimos</groupId>
         <artifactId>dvalin-interconnect-parent</artifactId>
-        <version>1.36-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <artifactId>dvalin-interconnect-core-legacy</artifactId>
     <name>(Legacy) Dvalin interconnect core library</name>
@@ -107,10 +107,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>javax.jms-api</artifactId>
-            <version>2.0.1</version>
-            <scope>compile</scope>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
+            <version>${jakarta.jms-api.version}</version>
         </dependency>
     </dependencies>
 </project>
