--- a/interconnect/test-legacy/pom.xml
+++ b/interconnect/test-legacy/pom.xml
@@ -15,5 +15,17 @@
             <artifactId>dvalin-interconnect-core-legacy</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.taimos</groupId>
+            <artifactId>dvalin-interconnect-core-legacy</artifactId>
+            <version>2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
+            <version>3.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
