--- a/jms/core/pom.xml
+++ b/jms/core/pom.xml
@@ -5,17 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>de.taimos</groupId>
-        <artifactId>dvalin-parent</artifactId>
-        <version>1.36-SNAPSHOT</version>
+        <artifactId>dvalin-jms-parent</artifactId>
+        <version>2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>dvalin-jms-core</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>javax.jms-api</artifactId>
-            <version>2.0.1</version>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
+            <version>${jakarta.jms-api.version}</version>
         </dependency>
 
         <dependency>
